sql/sql_class.cc
@@ -1000,6 +1000,7 @@ THD::THD()
    wsrep_applier(is_applier),
    wsrep_applier_closing(FALSE),
    wsrep_client_thread(0),
+   wsrep_apply_format(0),
    wsrep_apply_toi(false),
 #endif
    m_parser_state(NULL),
